--- a/Project5/Project5/Project5.vcxproj.filters
+++ b/Project5/Project5/Project5.vcxproj.filters
@@ -15,13 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="homework_08_01.cpp">
+    <ClCompile Include="..\..\..\..\..\Desktop\WEEK09_CODE\homework_09_01.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="homework_08_02.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="prac.c">
+    <ClCompile Include="..\..\..\..\..\Desktop\WEEK09_CODE\homework_09_02.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
